@@ -40,8 +40,7 @@ public enum ClusteringData {
 
     ClusteringData(Supplier<RealMatrix> similarity, int[][] expected, ClusteringOptions options) {
         this.similarity = similarity.get();
-        this.expected = makeSets(
-                Arrays.stream(expected).map(intArray -> Arrays.stream(intArray).boxed().collect(Collectors.toList())).collect(Collectors.toList()));
+        this.expected = makeSets(Arrays.stream(expected).map(intArray -> Arrays.stream(intArray).boxed().toList()).toList());
         this.options = options;
     }
 
